--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -15,23 +15,35 @@
 </head>
 <body id="home" ng-app="app" ng-controller="home as home">
 
-	<nav class="navbar navbar-inverse">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	      <a class="navbar-brand" href="#">File Upload App</a>
-	    </div>
-	    <ul class="nav navbar-nav navbar-right">
-	      <li ng-show="home.authenticated"><a href="#"><span class="glyphicon glyphicon-user"></span> <span ng-bind="home.user"></a></li>
-	      <li ng-show="!home.authenticated"><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-	      <li ng-show="home.authenticated"><a href="#" ng-click="home.logout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-	    </ul>
-	  </div>
-	</nav>	
+	<!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">File Upload App</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+		      <li ng-show="home.authenticated"><a href="#"><span class="glyphicon glyphicon-user"></span> <span ng-bind="home.user"></a></li>
+		      <li ng-show="!home.authenticated"><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+		      <li ng-show="home.authenticated"><a href="#" ng-click="home.logout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+	      </ul>
+        </div>
+      </div>
+    </nav>
 
-	<h2 ng-show="home.authenticated">Enviar Arquivo</h2>
-	
-	<div class="container" ng-show="home.authenticated">
-       <!-- The fileinput-button span is used to style the file input field as button -->
+    <!-- Begin page content -->
+    <div class="container" ng-show="home.authenticated">
+      <div class="page-header">
+        <h1>Enviar Arquivo</h1>
+      </div>
+      
+	  <!-- The fileinput-button span is used to style the file input field as button -->
        <span class="btn btn-success fileinput-button">
           <i class="glyphicon glyphicon-plus"></i> <span>Selecione o arquivo...</span>
           <!-- The file input field used as target for the file upload widget -->
@@ -45,8 +57,14 @@
        </div>
        <!-- The container for the uploaded files -->
        <div id="files" class="files"></div>
-       <br>
+       <br>		
     </div>
+
+    <footer class="footer">
+      <div class="container">
+        <a href="/swagger-ui.html" target="_blank">Swagger API Docs</a>
+      </div>
+    </footer>	
 	
 	<script>
 		$(function() {
@@ -54,11 +72,6 @@
 	            dataType: 'json',
 	            maxChunkSize: 1000000,
 	            maxNumberOfFiles: 1,
-	            done: function(e, data) {
-	            	if (data.result.message) {
-	                	$('<p/>').text(data.result.message).appendTo('#files');
-	            	}
-	            },
 	            progressall: function(e, data) {
 	                var progress = parseInt(data.loaded / data.total * 100, 10);
 	                $('#progress .progress-bar').css('width',
@@ -70,6 +83,12 @@
 	                name: $('#home').scope().home.user,
 	                fileId: Math.floor((Math.random() * 1000000000000) + 1)
 	            };
+	        }).bind('fileuploaddone', function(e, data) {
+            	if (data.result.name) {
+                	$('<p/>').text('O arquivo ' + data.result.name + ' foi enviado com sucesso.').appendTo('#files');
+            	}
+	        }).bind('fileuploadfail', function(e, data) {
+               	$('<p/>').text('Ocorreu um erro inesperado ao enviar o arquivo.').appendTo('#files');
 	        });
 	    });
 	</script>
